--- a/pom.xml
+++ b/pom.xml
@@ -2,22 +2,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>pl.com.mycompany</groupId>
-  <artifactId>JavaProject</artifactId>
+  <artifactId>javaproject</artifactId>
   <packaging>jar</packaging>
   <version>1.0</version>
-  <name>JavaProject</name>
+  <name>javaproject</name>
   <url>http://maven.apache.org</url>
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
