--- a/db/bookdb.properties
+++ b/db/bookdb.properties
@@ -1,8 +1,7 @@
-#HSQL Database Engine 1.8.1.3
-#Fri Jan 27 22:59:44 CET 2012
+#HSQL Database Engine 1.8.0.10
+#Sat Jan 28 19:40:16 CET 2012
 hsqldb.script_format=0
 runtime.gc_interval=0
-hsqldb.incremental_backup=false
 sql.enforce_strict_size=false
 hsqldb.cache_size_scale=8
 readonly=false
@@ -13,7 +12,7 @@ hsqldb.default_table_type=memory
 hsqldb.cache_file_scale=1
 hsqldb.lock_file=true
 hsqldb.log_size=200
-modified=yes
+modified=no
 hsqldb.cache_version=1.7.0
 hsqldb.original_version=1.8.1
 hsqldb.compatible_version=1.8.0
