--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.com.mycompany</groupId>
-    <artifactId>javaproject</artifactId>
+    <groupId>pl.com.mycompany.javaproject</groupId>
+    <artifactId>MPR-s7251</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>javaproject</name>
+    <name>MPR-s7251</name>
     <url>http://maven.apache.org</url>
 
     <properties>
