--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>pl.com.mycompany.javaproject</groupId>
-    <artifactId>MPR-s7251</artifactId>
+    <artifactId>JavaProject</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-    <name>MPR-s7251</name>
+    <name>JavaProject</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -16,6 +14,13 @@
     </properties>
     
     <dependencies>
+    <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+    
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
@@ -27,17 +32,12 @@
             <artifactId>hibernate-core</artifactId>
             <version>3.6.9.Final</version>
         </dependency>
+        
         <dependency>
             <groupId>javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>3.12.1.GA</version>
         </dependency>
-            
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-            <scope>test</scope>
-        </dependency>
+                    
     </dependencies>
 </project>
